--- a/build.gradle
+++ b/build.gradle
@@ -58,9 +58,9 @@ publishing {
     }
   }
   publications {
-    maven(MavenPublication) {
+    mavenJava(MavenPublication) {
+      from components.java
       groupId "${modowner}"
-      artifact("build/libs/${modname}-${version}.jar")
     }
   }
 }
