chore: prepare next iteration

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ modowner=fr.wseduc
 modname=web-utils
 
 # Your module version
-version=2.6.1
+version=2.7-SNAPSHOT
 
 # The test timeout in seconds
 testtimeout=300
